welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: value unary_! is not a member of Int
while (!x==14) {
       ^Runner:3: error: not enough arguments for method setX: (x$1: Int)Unit.
Unspecified value parameter x$1.
	x=setX()
              ^